# TerraForge-Labs

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  nixpacks.toml  pyproject.toml  scripts_check_phase1_readiness.py
.github/workflows/: benchmark.yml  ci.yml
apps/field_agent/: terraforge_agent.py
apps/mobile/: README.md  pubspec.yaml
apps/web/: .env.development  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web-dashboard/: package.json
backend/api/: bootstrap.py  celery_app.py  db.py  kriging.py  main.py  processing_tasks.py  tasks.py
backend/marketplace/: manage.py
backend/ml/: __init__.py  domain_models.py  metrics.py  pretrained_backbone.py  registry.py  stratified_cv.py
backend/processing/: cog_io.py  cog_tiles.py  deposit_model.py  ethnolinguistics.py  fusion_engine.py  gap_closure.py  geobotany_active_learning.py  geobotany_anomaly.py  geothermal_resource.py  gpu_classifier.py  gravity_reduction.py  groundwater_model.py  infrastructure.py  inversion_2d.py  inversion_3d_mt.py  inversion_mt.py  inversion_pipeline.py  lidar_pipeline.py  mapping_stack.py  ocr_borehole.py  ore_financials.py  paleontology.py  platform_expansion.py  raster_pipeline.py  satellite_feeds.py  sem_automineralogy.py  tectonic_context.py  train_stub.py  uav_pipeline.py  urban_analysis.py  variogram_cv.py  vegetation_stress.py
benchmarks/: README.md  run_all.py
docs/: README.md  architecture.md  commercial-license-template.md  contributing.md  deployment.md  geology_primer.md  instruments.md  layman-overview.md  phase2-plan.md  phase3-plan.md  phase4-ethnolinguistics-addendum.md  phase4-expanded-brief.md  phase4-gap-closure-addendum.md  phase4-track-q-geobotany.md  pricing.md  roadmap.md  security-baseline.md  slo.md
infra/: Dockerfile.api  Dockerfile.gpu-worker  Dockerfile.marketplace  Dockerfile.postgres  Dockerfile.worker  docker-compose.yml
marketplace/: models.py  views.py
models/: fine_tune_stub.py
plugins/: base.py
protos/: instrument_streaming.proto
scripts/: _debug_transcript.py  clean_recovered.py  dev.ps1  eval_domain_models_cv.py  eval_pretrained_sota_holdout.py  extract_compaction.py  extract_transcript_file.py  recover_from_transcript.py  recover_ui_from_transcript.py  scan_compaction_contents.py  scan_compaction_path.py  smoke-lidar.ps1
shared/: constants.py  sota_catalog.py  types.py
templates/: jorc_letterhead.html
tests/: test_deposit_model.py  test_jorc.py  test_kriging.py  test_mineral_train.py  test_phase2_compliance.py  test_phase2_geophysics.py  test_phase2_grain_segmentation.py  test_phase2_marketplace_models.py  test_phase2_petrography.py  test_phase2_plugins.py  test_phase2_readiness.py  test_phase2_spectral.py  test_phase3_agent.py  test_phase3_llm.py  test_phase3_marketplace.py  test_phase3_mt3d.py  test_phase3_paleontology.py  test_phase3_sem.py  test_phase3_tectonic.py  test_phase4_ethnolinguistics.py  test_phase4_expanded.py  test_phase4_gap_closure.py  test_phase4_geobotany.py  test_terrameter.py  test_xrf_bruker.py
(+381 files in other folders)
