[tool.poetry]
name = "terraforge-labs"
version = "0.1.0"
description = "Phase 0 scaffold"
authors = ["Terraforge Labs"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
django = "^5.0"
djangorestframework = "^3.15"
geopandas = "^0.14"
pykrige = "^1.7"
simpeg = "^0.20"
obspy = "^1.4"
pygplates = "^0.37"
torch = "^2.3"
transformers = "^4.41"
scikit-learn = "^1.4"
dask = {extras = ["distributed"], version = "^2024.5"}
rasterio = "^1.3"
opencv-python = "^4.9"
numpy = "^1.26"
pandas = "^2.2"
pyproj = "^3.6"
shapely = "^2.0"
gempy = "^2.3"
pyvista = "^0.43"
loopstructural = "^1.5"
scipy = "^1.13"
pyserial = "^3.5"
bluepy = "^1.3"
pyusb = "^1.2"
segyio = "^1.9"
xmltodict = "^0.13"
fiona = "^1.9"
ipfshttpclient = "^0.8"
redis = "^5.0"
celery = "^5.4"
sentry-sdk = {extras = ["fastapi"], version = "^2.4"}
scikit-image = "^0.23"
segmentation-models-pytorch = "^0.3"
pytesseract = "^0.3"
easyocr = "^1.7"
weasyprint = "^62"
reportlab = "^4.2"
tenacity = "^8.3"
google-generativeai = "^0.7"
albumentations = "^1.4"
torchvision = "^0.18"
onnxruntime = "^1.18"
onnx = "^1.16"
ai-edge-torch = "^0.2"
georinex = "^1.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
mypy = "^1.11"
black = "^24.4"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
