[tool.poetry]
name = "terraforge-labs"
version = "0.1.0"
description = "Phase 0 scaffold"
authors = ["Terraforge Labs"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
django = "^5.0"
djangorestframework = "^3.15"
numpy = "^1.26"
pandas = "^2.2"
scipy = "^1.13"
pydantic = "^2.0"
xmltodict = "^0.13"
reportlab = "^4.2"
python-docx = "^1.1"
tenacity = "^8.3"
networkx = "^3.3"
redis = "^5.0"
celery = "^5.4"
sentry-sdk = {extras = ["fastapi"], version = "^2.4"}
psycopg = {extras = ["binary"], version = "^3.2"}
PyJWT = "^2.9"
bcrypt = "^4.2"
email-validator = "^2.2"
python-dotenv = "^1.0"
minio = "^7.2"
pykrige = "^1.7.2"
rasterio = "^1.3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.11"
black = "^24.4"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
geopandas = "^0.14"
pykrige = "^1.7"
torch = "^2.3"
torchvision = "^0.18"
transformers = "^4.41"
scikit-learn = "^1.4"
rasterio = "^1.3"
opencv-python = "^4.9"
pillow = "^10.4"
shapely = "^2.0"
pyproj = "^3.6"
mlflow = "^2.14"
geopandas = "^0.14"
shapely = "^2.0"
pyproj = "^3.6"
pillow = "^10.4"
opencv-python-headless = "^4.9"
psycopg2-binary = "^2.9"
google-generativeai = "^0.7"
httpx = "^0.27"
python-multipart = "^0.0.9"
pgvector = "^0.3"
celery = {extras = ["redis"], version = "^5.4"}

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false